2017-02-19  Bruno Haible  <bruno@clisp.org>

	Make --with-{libsigsegv,libffcall}-prefix with clang on 64-bit Ubuntu.
	* glm4/lib-prefix.m4: Update from gnulib.
	* aclocal.m4, src/configure, modules/*/configure: Regenerated.

2017-02-19  Bruno Haible  <bruno@clisp.org>

	Modernize: Really update to the newest gnulib.
	Ran "make -f Makefile.devel build-aux-update gnulib-imported
	build-prerequisites".
	* Makefile.devel (GNULIB_AUX, build-aux-update): Fetch depcomp and
	install-sh from Automake, not gnulib. Fetch also ar-lib from Automake.
	* build-aux/config.guess: Update from gnulib git.
	* build-aux/config.rpath: Likewise.
	* build-aux/config.sub: Likewise.
	* build-aux/ar-lib: New file, from automake git.
	* build-aux/compile: Update from automake git.
	* build-aux/depcomp: Likewise.
	* build-aux/missing: Likewise.
	* build-aux/ylwrap: Likewise.
	* build-aux/snippet/*: Update from gnulib.
	* gllib/*: Likewise.
	* glm4/*: Likewise.
	* gllib/Makefile.am, gllib/Makefile.in: Regenerated.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.
	* modules/*/configure, modules/*/config.h.in: Likewise.
	* modules/*/*/config.h.in, modules/*/*/configure: Likewise.
	* utils/txt2c.c (process_file): Handle multiline #if directives.

2017-02-19  Bruno Haible  <bruno@clisp.org>

	maint: Fix conflict between fix-perms.sh and gnulib import.
	* utils/fix-perms.sh: Don't clobber the permissions of
	gllib/uniname/gen-uninames.lisp.

2017-02-19  Bruno Haible  <bruno@clisp.org>

	Fix build failure on Linux with musl libc.
	* unix.d: Don't include <asm/page.h>. Instead, assume SHMLBA is defined
	in <sys/shm.h>.

2017-02-19  Bruno Haible  <bruno@clisp.org>

	Disable the 'ulimit -s 16384' recommendation, except on PowerPC.
	* configure (STACK_LIMIT): Set to 8192 on all CPUs except PowerPC.

2017-02-19  Bruno Haible  <bruno@clisp.org>

	Recommend libsigsegv 2.11.
	* configure (libsigsegv_url): Update to 2.11.

2017-02-19  Bruno Haible  <bruno@clisp.org>
