@@ -1,5 +1,12 @@
 2017-02-19  Bruno Haible  <bruno@clisp.org>
 
+	Fix build failure with clang.
+	* lispbibl.d (STACK_register, mv_count_register, value1_register,
+	SP_register): Don't define for clang.
+	(restartf_t): Don't use _Noreturn on a function type, except with GCC.
+
+2017-02-19  Bruno Haible  <bruno@clisp.org>
+
 	Make --with-{libsigsegv,libffcall}-prefix with clang on 64-bit Ubuntu.
 	* glm4/lib-prefix.m4: Update from gnulib.
 	* aclocal.m4, src/configure, modules/*/configure: Regenerated.
